--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-delete-file": "^1.0.2",
+    "gulp-inject": "^4.2.0",
+    "gulp-rename": "^1.2.2"
   }
 }
