--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-delete-file": "^1.0.2",
+    "gulp-file": "^0.3.0",
     "gulp-inject": "^4.2.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "map-stream": "0.0.7"
   }
 }
